css/style.css
@font-face {
    font-family: 'Open_Sans';
    src: url(../fonts/OpenSans-Regular-webfont.woff) format('woff');
}

@font-face {
    font-family: 'Righteous';
    src: url(../fonts/Righteous-Regular.ttf) format('truetype');
}

@font-face {
    font-family: 'Cirqua';
    src: url(../fonts/Lupanesque.ttf) format('truetype');
}

html {
    position: relative;
}

body {
    margin-bottom: 100px;
    /* margin-top: 30px; */
    font-family: 'Open_Sans';
    color: #33495F;
}

nav {
    transition: all ease 400ms;
}

hr {
    width: 250px;
    border-top: 3px solid goldenrod;
}

section {
    min-height: 100vh;
    padding-bottom: 50px;
}

section h2:first-child {
    font-weight: 900;
}

@media screen and (max-width:768px) {
    .mb {
        margin-bottom: 50px;
    }
}

/* Navbar Section */
.navbar {
    padding: 10px;
    opacity: 1;
    background-color: rgba(51,73,95, 0);
    height: 0;
}

.navbar-brand img {
    width: 40px;
}

.scroll {
    padding: 0;
    background-color: rgba(51,73,95, 1);
    border-bottom: 1px groove black;
}

.toggle-click {
    background-color: rgba(51,73,95, .9);
    height: 100vh;
}

.navbar .navbar-header a {
    font-family: 'Cirqua', cursive;
    font-weight: 900;
    font-size: 25px;
    color: goldenrod;
    letter-spacing: 5px;
}

.navbar .navbar-nav li a {
    color: #ECF0F2;
    font-size: 18px;
    font-weight: 900;
    text-transform: uppercase;
    transition: all ease 300ms;
}

.navbar-fixed-top .navbar-nav li a:hover,
.navbar-fixed-top .navbar-nav li a:focus {
    color: goldenrod;
    font-size: 40px;
}
/* End Navbar Section */

/* Jumbotron Section */
.jumbotron {
    background-image: url(../img/top_sider_bg.jpg);
    background-size: cover;
    min-height: 100%;  
    min-height: 100vh;
    display: flex;
    align-items: center;
}

.jumbotron h1 {
    font-family: 'Righteous', cursive;
    font-weight: 900;
    color: #ECF0F2;
}

.jumbotron p {
    color: #ECF0F2;
}

.jumbotron .pasFoto {
    border: 3px solid #33495F;
    width: 200px;
}

@media screen and (max-width:768px) {
    .jumbotron p {
        font-size: 18px;
    }
}
/* End Jumbotron Section */

/* About Section */
.about {
    background-color: #33495F;
    color: #ECF0F2;
    padding: 50px 0;
    display: flex;
    align-items: center;
}

.about hr {
    margin: 10px 0 25px;
    width: 100px;
}

.about img {
    width: 300px;
    box-shadow: 1px 1px 2px 9px #33495F, 0.6px 0.6px 4px 7px black;
    border-radius: 5px;
    filter: saturate(.9);
}

.about i {
    font-weight: bold;
    color: #DAA520;
    font-style: normal;
}

.box-details {
    margin-top: 30px;
    border: 1px solid goldenrod;
    padding: 20px;
    border-radius: 5px;
}

.btn-cv {
    margin-top: 20px;
    color: #ECF0F2;
    padding: 10px;
    font-weight: 900;
    border: 1px solid white;
    background: linear-gradient(to right, goldenrod 50%, transparent 50%); 
    background-position: right bottom;
    background-size: 200% 100%;
    transition: all ease-out 300ms;
}

.btn-cv:hover {
    color: white;
    border: 1px solid goldenrod;
    background-position: left bottom;
    
}

@media screen and (min-width:992px) {
    .about h2 {
        margin:  0;
        padding: 0;
    }
}

@media screen and (max-width:992px) {
    .about h2 {
        text-align: center;
    }
    
    .about hr {
        margin: 0 auto 25px;
    }
}

@media screen and (min-width:1366px) {
    .about h2 {
        font-size: 60px;
    }

    .about p {
        font-size: 20px;
    }

    .box-details p {
        font-size: 16px;
    }
}
/* End About Section */

/* Resume Section */
.dot {
    display: inline-block;
    position: absolute;
    background-color: #DAA520;
    border-radius: 10px;
    border: 2px solid #DAA520;
    z-index: 2;
    width: 12px;
    height: 12px;
}

.line {
    display: inline-block;
    position: absolute;
    background-color: #DAA520;
    border-radius: 10px;
    width: 36px;
    height: 1px;
    border: 2px solid #DAA520;
    z-index: 2;
}

.dot-right {
    top: 50%;
    right: -43px;
    transform: translateY(-35%);
}

.dot-left {
    top: 50%;
    left: -43px;
    transform: translateY(-35%);
}

.line-right {
    top: 50%;
    right: -36px;
}

.line-left {
    top: 50%;
    left: -36px;
}

.resume {
    background-color: #ECF0F2;
}

.content {
    background-color: white;
    padding: 25px;
    margin-bottom: 30px;
    border-radius: 4px;
    position: relative;
}

.left-wrapper {
    border-right: 1px dotted #33495F;
}

.right-wrapper {
    border-left: 1px dotted #33495F
}

.content h3 {
    font-style: italic;
    font-weight: 900; 
}

.fa-circle-check {
    color: #1fc016;
}

.content h3,
.content p {
    color: #DAA520;
    
}

.content h3 {
    margin:0 0 10px;
    font-size: 26px;
}

.edu {
    margin-right: 35px;
    box-shadow: -18px 18px 18px 0 rgba(0, 0, 0, 0.2);
    border-right: 2px solid goldenrod;
}

.work-ex {
    margin-left: 35px;
    box-shadow: 18px 18px 18px 0 rgba(0, 0, 0, 0.2);
    border-left: 2px solid goldenrod;
}
/* End Resume Section */

/* Portfolio Section */
.portfolio {
    background-color: #33495F;
}

.portfolio h2 {
    color: #ECF0F2;
}

.portfolio img {
    width: 555px;
    height: 294px;
}
/* End Portfolio Section */

/* Skills Section */
/* - technical skill - */
.skills p {
    margin: 0;
    font-weight: 900;
    font-size: 15px;
}

.scale-of {
    width: 100%;
    background-color: #ddd;
    border-radius: 10px;
    margin: 4px 0 10px 0;
    line-height: 100%;
}

.pro {
    margin: 0;
}

.skill {
    color: white;
    padding-left: 30px;
}

.round {
    width: 40px;
    height: 40px;
    background-size: cover;
    background-color: #DAA520;
    border-radius: 50%;
    position: absolute;
    top: -13px;
    right: -15px;
    line-height: 40px;
    align-items: center;
    text-align: center;
}

.html-logo {background-image: url(../img/logo-html.png);}
.css-logo {background-image: url(../img/logo-css.png);}
.js-logo {background-image: url(../img/logo-js.png);}
.php-logo {background-image: url(../img/logo-php.png);}
.node-logo {background-image: url(../img/logo-node.png);}
.vb-logo {background-image: url(../img/logo-vb.png);}
.java-logo {background-image: url(../img/logo-java.png);}
  
.html {width: 80%; background-color: #E44D26; position: relative;}
.css {width: 80%; background-color: #379AD6; position: relative;}
.js {width: 70%; background-color: #FADF1C; position: relative;}
.php {width: 80%; background-color: #4F5B93; position: relative;}
.node {width: 50%; background-color: #7DBE42; position: relative;}
.vb {width: 60%; background-color: #136099; position: relative;}
.java {width: 60%; background-color: #DD3E68; position: relative;}

/* - professional skill - */
.skills .table td {
    border: none;
    font-size: 15px;
    font-weight: 900;
}

.skills .table td.skill-name {
    width: 30%;
}

.skills .table td.skill-bar {
    width: 100%;
}

.communication {width: 80%; height: 13px; background-color: #DAA520; position: relative;}
.team-work {width: 70%; height: 13px; background-color: #DAA520; position: relative;}
.motivate {width: 90%; height: 13px; background-color: #DAA520; position: relative;}
.confidence {width: 70%; height: 13px; background-color: #DAA520; position: relative;}
.speaking {width: 65%; height: 13px; background-color: #DAA520; position: relative;}
.creative {width: 80%; height: 13px; background-color: #DAA520; position: relative;}
/* End Skills Section */

/* Contact Section */
.contact {
    background-color: #1E2326;
    color: #ECF0F2;
}
/* End Contact Sectiom */

footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    min-height: 100px;
    background-color: #33495F;
    color: #ECF0F2;
    padding: 30px 0;
}

footer a {
    color: goldenrod;
  
}

.social-media a {
    padding: 0.2em;
    color: #ECF0F2;
    transition: 300ms;
}

.social-media a:hover,
.social-media a:focus {
    color: goldenrod;
    background: #ffffff1a;
    text-decoration: none;
    border-radius: 10px;
}

footer p a:hover {
    color: goldenrod;
    text-decoration: underline;
}

